Bug 400769 - Crash and unusual behavior after upgrading KDevelop to 5.3.0 [crash in Clazy::JobParameters::JobParameters]
Summary: Crash and unusual behavior after upgrading KDevelop to 5.3.0 [crash in Clazy:...
Status: RESOLVED FIXED
Alias: None
Product: kdevelop
Classification: Applications
Component: Analyzer: Clazy (other bugs)
Version First Reported In: 5.3.0
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: kdevelop-bugs-null
URL:
Keywords: drkonqi
: 401074 401361 401562 402085 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-11-06 23:00 UTC by rgoomes
Modified: 2024-05-15 18:40 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.3.1
Sentry Crash Report:


Attachments
Crash, same steps to reproduce (deleted)
2018-11-07 09:55 UTC, rgoomes
Details

Note You need to log in before you can comment on or make changes to this bug.
Description rgoomes 2018-11-06 23:00:14 UTC
Application: kdevelop (5.3.0)

Qt Version: 5.11.2
Frameworks Version: 5.51.0
Operating System: Linux 4.15.0-38-generic x86_64
Distribution: KDE neon User Edition 5.14

-- Information about the crash:
- What I was doing when the application crashed: Go to Project menu and then Open Configuration Settings

- Unusual behavior I noticed: Code Browser and Problems tool views and Background Parser are not working after upgrading KDevelop to 5.3.0

The crash can be reproduced every time.

-- Backtrace:
Application: KDevelop (kdevelop), signal: Segmentation fault
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f4942062bc0 (LWP 18419))]

Thread 9 (Thread 0x7f48d1f82700 (LWP 19216)):
#0  0x00007f493e6c0bf9 in __GI___poll (fds=0x7f48cc004a70, nfds=1, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:29
#1  0x00007f493532d439 in  () at /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f493532d54c in g_main_context_iteration () at /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f493effb04b in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#4  0x00007f493ef9f30a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#5  0x00007f493edcabba in QThread::exec() () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#6  0x00007f493edd5adb in  () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#7  0x00007f49374c86db in start_thread (arg=0x7f48d1f82700) at pthread_create.c:463
#8  0x00007f493e6cd88f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 8 (Thread 0x7f48ed0aa700 (LWP 18449)):
#0  0x00007f493e6c0bf9 in __GI___poll (fds=0x7f48e0004e50, nfds=1, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:29
#1  0x00007f493532d439 in  () at /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f493532d54c in g_main_context_iteration () at /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f493effb04b in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#4  0x00007f493ef9f30a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#5  0x00007f493edcabba in QThread::exec() () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#6  0x00007f48d29763b5 in  () at /usr/lib/x86_64-linux-gnu/qt5/qml/QtQuick/XmlListModel/libqmlxmllistmodelplugin.so
#7  0x00007f493edd5adb in  () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#8  0x00007f49374c86db in start_thread (arg=0x7f48ed0aa700) at pthread_create.c:463
#9  0x00007f493e6cd88f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 7 (Thread 0x7f48ec8a9700 (LWP 18428)):
#0  0x00007f4935372d79 in g_mutex_lock () at /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#1  0x00007f493532ce5c in g_main_context_check () at /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f493532d3e0 in  () at /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f493532d54c in g_main_context_iteration () at /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f493effb04b in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#5  0x00007f493ef9f30a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#6  0x00007f493edcabba in QThread::exec() () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#7  0x00007f49382604f5 in  () at /usr/lib/x86_64-linux-gnu/libQt5Qml.so.5
#8  0x00007f493edd5adb in  () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#9  0x00007f49374c86db in start_thread (arg=0x7f48ec8a9700) at pthread_create.c:463
#10 0x00007f493e6cd88f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 6 (Thread 0x7f48ee15c700 (LWP 18424)):
#0  0x00007f4935372d79 in g_mutex_lock () at /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#1  0x00007f493532d538 in g_main_context_iteration () at /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f493effb04b in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#3  0x00007f493ef9f30a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#4  0x00007f493edcabba in QThread::exec() () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#5  0x00007f493edd5adb in  () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#6  0x00007f49374c86db in start_thread (arg=0x7f48ee15c700) at pthread_create.c:463
#7  0x00007f493e6cd88f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 5 (Thread 0x7f48f06fe700 (LWP 18423)):
#0  0x00007f49374ce9f3 in futex_wait_cancelable (private=<optimized out>, expected=0, futex_word=0x7f48f3fea110) at ../sysdeps/unix/sysv/linux/futex-internal.h:88
#1  0x00007f49374ce9f3 in __pthread_cond_wait_common (abstime=0x0, mutex=0x55c675ec7e10, cond=0x7f48f3fea0e8) at pthread_cond_wait.c:502
#2  0x00007f49374ce9f3 in __pthread_cond_wait (cond=0x7f48f3fea0e8, mutex=0x55c675ec7e10) at pthread_cond_wait.c:655
#3  0x00007f493ea5479c in std::condition_variable::wait(std::unique_lock<std::mutex>&) () at /usr/lib/x86_64-linux-gnu/libstdc++.so.6
#4  0x00007f48f32fc217 in  () at /usr/lib/x86_64-linux-gnu/libQt5WebKit.so.5
#5  0x00007f48f32fc359 in  () at /usr/lib/x86_64-linux-gnu/libQt5WebKit.so.5
#6  0x00007f493ea5a57f in  () at /usr/lib/x86_64-linux-gnu/libstdc++.so.6
#7  0x00007f49374c86db in start_thread (arg=0x7f48f06fe700) at pthread_create.c:463
#8  0x00007f493e6cd88f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 4 (Thread 0x7f48fa56a700 (LWP 18422)):
#0  0x00007f493e6bc0b4 in __GI___libc_read (fd=13, buf=0x7f48fa569760, nbytes=16) at ../sysdeps/unix/sysv/linux/read.c:27
#1  0x00007f4935371a00 in  () at /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f493532cf27 in g_main_context_check () at /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f493532d3e0 in  () at /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f493532d54c in g_main_context_iteration () at /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007f493effb04b in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#6  0x00007f493ef9f30a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#7  0x00007f493edcabba in QThread::exec() () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#8  0x00007f493d3cca3b in  () at /usr/lib/x86_64-linux-gnu/libKDevPlatformLanguage.so.53
#9  0x00007f493edd5adb in  () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#10 0x00007f49374c86db in start_thread (arg=0x7f48fa56a700) at pthread_create.c:463
#11 0x00007f493e6cd88f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 3 (Thread 0x7f49043b0700 (LWP 18421)):
#0  0x00007f493e6c0bf9 in __GI___poll (fds=0x7f48fc011c40, nfds=1, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:29
#1  0x00007f493532d439 in  () at /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f493532d54c in g_main_context_iteration () at /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f493effb04b in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#4  0x00007f493ef9f30a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#5  0x00007f493edcabba in QThread::exec() () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#6  0x00007f4940b79e45 in  () at /usr/lib/x86_64-linux-gnu/libQt5DBus.so.5
#7  0x00007f493edd5adb in  () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#8  0x00007f49374c86db in start_thread (arg=0x7f49043b0700) at pthread_create.c:463
#9  0x00007f493e6cd88f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 2 (Thread 0x7f490df6a700 (LWP 18420)):
#0  0x00007f493e6c0bf9 in __GI___poll (fds=0x7f490df698e8, nfds=1, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:29
#1  0x00007f492a8e4747 in  () at /usr/lib/x86_64-linux-gnu/libxcb.so.1
#2  0x00007f492a8e636a in xcb_wait_for_event () at /usr/lib/x86_64-linux-gnu/libxcb.so.1
#3  0x00007f490fc6eed9 in  () at /usr/lib/x86_64-linux-gnu/libQt5XcbQpa.so.5
#4  0x00007f493edd5adb in  () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#5  0x00007f49374c86db in start_thread (arg=0x7f490df6a700) at pthread_create.c:463
#6  0x00007f493e6cd88f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 1 (Thread 0x7f4942062bc0 (LWP 18419)):
[KCrash Handler]
#6  0x00007f48ee86b75f in  () at /usr/lib/x86_64-linux-gnu/qt5/plugins/kdevplatform/31/kdevclazy.so
#7  0x00007f48ee86c157 in  () at /usr/lib/x86_64-linux-gnu/qt5/plugins/kdevplatform/31/kdevclazy.so
#8  0x00007f48ee85b91f in  () at /usr/lib/x86_64-linux-gnu/qt5/plugins/kdevplatform/31/kdevclazy.so
#9  0x00007f48ee8520bd in  () at /usr/lib/x86_64-linux-gnu/qt5/plugins/kdevplatform/31/kdevclazy.so
#10 0x00007f4941bc7728 in  () at /usr/lib/x86_64-linux-gnu/libKDevPlatformShell.so.53
#11 0x00007f4941bb9aeb in  () at /usr/lib/x86_64-linux-gnu/libKDevPlatformShell.so.53
#12 0x00007f493efd018f in QMetaObject::activate(QObject*, int, int, void**) () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#13 0x00007f49404636b2 in QAction::triggered(bool) () at /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#14 0x00007f4940465cec in QAction::activate(QAction::ActionEvent) () at /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#15 0x00007f493efd0be2 in QObject::event(QEvent*) () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#16 0x00007f4940466665 in QAction::event(QEvent*) () at /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#17 0x00007f4940469e1c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () at /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#18 0x00007f49404713ef in QApplication::notify(QObject*, QEvent*) () at /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#19 0x00007f493efa0fe8 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#20 0x00007f493efa3b2d in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#21 0x00007f493effb9f3 in  () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#22 0x00007f493532d287 in g_main_context_dispatch () at /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#23 0x00007f493532d4c0 in  () at /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#24 0x00007f493532d54c in g_main_context_iteration () at /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#25 0x00007f493effb02f in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#26 0x00007f490fcfa761 in  () at /usr/lib/x86_64-linux-gnu/libQt5XcbQpa.so.5
#27 0x00007f493ef9f30a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#28 0x00007f493efa84d0 in QCoreApplication::exec() () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#29 0x000055c67386a190 in  ()
#30 0x00007f493e5cdb97 in __libc_start_main (main=0x55c6738644b0, argc=3, argv=0x7ffcd3cc0a68, init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7ffcd3cc0a58) at ../csu/libc-start.c:310
#31 0x000055c67386a83a in _start ()

Reported using DrKonqi
Comment 1 Friedrich W. H. Kossebau 2018-11-06 23:47:17 UTC
Thanks for the report. Never seen such an issue myself during development, so no instant idea.

The current backtrace misses interesting debug info for the part
#6  0x00007f48ee86b75f in  () at /usr/lib/x86_64-linux-gnu/qt5/plugins/kdevplatform/31/kdevclazy.so
#7  0x00007f48ee86c157 in  () at /usr/lib/x86_64-linux-gnu/qt5/plugins/kdevplatform/31/kdevclazy.so
#8  0x00007f48ee85b91f in  () at /usr/lib/x86_64-linux-gnu/qt5/plugins/kdevplatform/31/kdevclazy.so
#9  0x00007f48ee8520bd in  () at /usr/lib/x86_64-linux-gnu/qt5/plugins/kdevplatform/31/kdevclazy.so
#10 0x00007f4941bc7728 in  () at /usr/lib/x86_64-linux-gnu/libKDevPlatformShell.so.53
#11 0x00007f4941bb9aeb in  () at /usr/lib/x86_64-linux-gnu/libKDevPlatformShell.so.53

Could you please install the debug symbols for KDevPlatform (and the KDevelop plugins, no idea how those are split in packages for Neon?) and create a new backtrace, where in this part we then can see which methods are actually called?
Comment 2 rgoomes 2018-11-07 09:55:18 UTC
Created attachment 116146 [details]
Crash, same steps to reproduce

Attached symbolicated crash dump. Hope it helps
Comment 3 rgoomes 2018-11-07 10:06:30 UTC
(In reply to rgoomes from comment #2)
> Created attachment 116146 [details]
> Crash, same steps to reproduce
> 
> Attached symbolicated crash dump. Hope it helps

Disabling Clazy Support plugin fixes the crash. However, Code Browser and Problems tool views and Background Parser are still not working
Comment 4 Friedrich W. H. Kossebau 2018-11-07 17:42:36 UTC
(In reply to rgoomes from comment #3)
> (In reply to rgoomes from comment #2)
> > Created attachment 116146 [details]
> > Crash, same steps to reproduce
> > 
> > Attached symbolicated crash dump. Hope it helps
> 
> Disabling Clazy Support plugin fixes the crash. 

Thanks for the new backtrace, that helped indeed to locate a potential error in the code.

Is the project you see the crash with one without special build system support by KDevelop, using the generic project support?

Please tell what the file "YOURPROJECT.kdev4" in the toplevel source directory (with YOURPROJECT replaced by whatever you named your project) has in the line with "Manager=". Best report the whole content of the file, should be just a few lines with nothing secret inside.
Comment 5 rgoomes 2018-11-07 19:41:39 UTC
(In reply to Friedrich W. H. Kossebau from comment #4)
> (In reply to rgoomes from comment #3)
> > (In reply to rgoomes from comment #2)
> > > Created attachment 116146 [details]
> > > Crash, same steps to reproduce
> > > 
> > > Attached symbolicated crash dump. Hope it helps
> > 
> > Disabling Clazy Support plugin fixes the crash. 
> 
> Thanks for the new backtrace, that helped indeed to locate a potential error
> in the code.
> 
> Is the project you see the crash with one without special build system
> support by KDevelop, using the generic project support?
> 
> Please tell what the file "YOURPROJECT.kdev4" in the toplevel source
> directory (with YOURPROJECT replaced by whatever you named your project) has
> in the line with "Manager=". Best report the whole content of the file,
> should be just a few lines with nothing secret inside.

Yes, it is the generic project:
[Project]
CreatedFrom=
Manager=KDevGenericManager
Name=test
Comment 6 rgoomes 2018-11-09 23:24:44 UTC
The other issues are related to https://bugs.kde.org/show_bug.cgi?id=400882
Comment 7 Friedrich W. H. Kossebau 2018-11-15 12:49:26 UTC
Thanks for the project file data, confirms where I see the bug and could also reproduce.
Started to work on a patch...
Comment 8 Friedrich W. H. Kossebau 2018-11-16 13:33:57 UTC
Git commit a3c782ac37cdcd2dc1ac4c665112aef87de8ab27 by Friedrich W. H. Kossebau.
Committed on 16/11/2018 at 13:33.
Pushed by kossebau into branch '5.3'.

Disable plugin project config if project without a IBuildSystemManager dep

Summary:
The Clazy plugin relies on the project providing a buildsystem manager
to query for the toplevel build directory. If a project has no such manager,
showing the Clazy plugin config pages in the project settings has no
purpose.
As a session might contain different projects, some with a buildsystem
manager, some without, simply disabling the Clazy plugin might not be
wanted for the projects with a buildsystem manager.
So we need to have some condition whether to show some plugins per-project
config pages or not.
For a start, motivated by the crash with the Clazy plugin which has a
hard assumption of project->buildSystemManager() being != nullptr,
this patch adds to the code to collect the config pages for the project
settings dialog some special code which makes use of the plugin metadata
to skip plugins which require a org.kdevelop.IBuildSystemManager, if
there is no buildsystem manager available for the project.
As well adds the (so far missing) entry
X-KDevelop-IRequired: [org.kdevelop.IBuildSystemManager]
to the metadata.

Test Plan:
Clazy config is no longer shown in the project settings dialog if the
project is used with the generic project manager.

Reviewers: #kdevelop, apol

Reviewed By: #kdevelop, apol

Subscribers: kfunk, kdevelop-devel

Tags: #kdevelop

Differential Revision: https://phabricator.kde.org/D16915

M  +11   -1    kdevplatform/shell/projectcontroller.cpp
M  +3    -0    plugins/clazy/kdevclazy.json

https://commits.kde.org/kdevelop/a3c782ac37cdcd2dc1ac4c665112aef87de8ab27
Comment 9 Kevin Funk 2018-11-26 09:06:11 UTC
Pasting backtrace inline for better SEO:

Thread 1 (Thread 0x7f36bdc02bc0 (LWP 2277)):
[KCrash Handler]
#6  0x00007f366a59475f in Clazy::JobParameters::JobParameters(KDevelop::IProject*, QString const&) (this=0x564588788b50, project=0x564587df0ce0, checkPath=...) at ./plugins/clazy/jobparameters.cpp:146
#7  0x00007f366a595157 in Clazy::JobParameters::JobParameters(KDevelop::IProject*) (this=<optimized out>, project=<optimized out>) at ./plugins/clazy/jobparameters.cpp:135
#8  0x00007f366a58491f in Clazy::ProjectConfigPage::ProjectConfigPage(Clazy::Plugin*, KDevelop::IProject*, QWidget*) (this=0x564588789380, plugin=0x56458731f300, project=0x564587df0ce0, parent=0x56458833e750) at ./plugins/clazy/config/projectconfigpage.cpp:38
#9  0x00007f366a57b0bd in Clazy::Plugin::perProjectConfigPage(int, KDevelop::ProjectConfigOptions const&, QWidget*) (this=0x56458731f300, number=<optimized out>, options=..., parent=0x56458833e750) at ./plugins/clazy/plugin.cpp:272
#10 0x00007f36bd767728 in KDevelop::ProjectControllerPrivate::projectConfig(QObject*) (this=<optimized out>, obj=<optimized out>) at ./kdevplatform/shell/projectcontroller.cpp:153
#11 0x00007f36bd759aeb in KDevelop::ProjectControllerPrivate::openProjectConfig() (this=0x56458718e370) at ./kdevplatform/shell/projectcontroller.cpp:270
#12 0x00007f36bd759aeb in KDevelop::ProjectController::<lambda()>::operator() (__closure=<optimized out>) at ./kdevplatform/shell/projectcontroller.cpp:590
#13 0x00007f36bd759aeb in QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, KDevelop::ProjectController::setupActions()::<lambda()> >::call (arg=<optimized out>, f=...) at /usr/include/x86_64-linux-gnu/qt5/QtCore/qobjectdefs_impl.h:128
#14 0x00007f36bd759aeb in QtPrivate::Functor<KDevelop::ProjectController::setupActions()::<lambda()>, 0>::call<QtPrivate::List<>, void> (arg=<optimized out>, f=...) at /usr/include/x86_64-linux-gnu/qt5/QtCore/qobjectdefs_impl.h:238
#15 0x00007f36bd759aeb in QtPrivate::QFunctorSlotObject<KDevelop::ProjectController::setupActions()::<lambda()>, 0, QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase *, QObject *, void **, bool *) (which=<optimized out>, this_=<optimized out>, r=<optimized out>, a=<optimized out>, ret=<optimized out>) at /usr/include/x86_64-linux-gnu/qt5/QtCore/qobjectdefs_impl.h:421
#16 0x00007f36bab7018f in QMetaObject::activate(QObject*, int, int, void**) () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#17 0x00007f36bc0036b2 in QAction::triggered(bool) () at /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#18 0x00007f36bc005cec in QAction::activate(QAction::ActionEvent) () at /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#19 0x00007f36bab70be2 in QObject::event(QEvent*) () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#20 0x00007f36bc006665 in QAction::event(QEvent*) () at /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#21 0x00007f36bc009e1c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () at /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#22 0x00007f36bc0113ef in QApplication::notify(QObject*, QEvent*) () at /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#23 0x00007f36bab40fe8 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#24 0x00007f36bab43b2d in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#25 0x00007f36bab9b9f3 in  () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#26 0x00007f36b0ecd287 in g_main_context_dispatch () at /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#27 0x00007f36b0ecd4c0 in  () at /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#28 0x00007f36b0ecd54c in g_main_context_iteration () at /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#29 0x00007f36bab9b02f in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#30 0x00007f368b89a761 in  () at /usr/lib/x86_64-linux-gnu/libQt5XcbQpa.so.5
#31 0x00007f36bab3f30a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#32 0x00007f36bab484d0 in QCoreApplication::exec() () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#33 0x0000564585827190 in main(int, char**) (argc=<optimized out>, argv=<optimized out>) at ./app/main.cpp:849
Comment 10 Kevin Funk 2018-11-26 09:06:47 UTC
*** Bug 401361 has been marked as a duplicate of this bug. ***
Comment 11 Kevin Funk 2018-11-30 10:35:09 UTC
*** Bug 401562 has been marked as a duplicate of this bug. ***
Comment 12 Francis Herne 2018-12-13 11:06:57 UTC
*** Bug 402085 has been marked as a duplicate of this bug. ***
Comment 13 Francis Herne 2019-01-24 14:58:24 UTC
*** Bug 401074 has been marked as a duplicate of this bug. ***
Comment 14 Ben Cooksley 2024-05-15 18:40:17 UTC
The content of attachment 116146 [details] has been deleted for the following reason:

Removed due to complaint from original poster